--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,13 @@
 version: "3.2"
 services:
   elasticsearch01:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.0.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.0.1
+    container_name: elasticsearch01
     environment:
       - cluster.name=conex-moose
       - node.name=elasticsearch01
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "ES_JAVA_OPTS=-Xms4g -Xmx4g"
     ulimits:
       memlock:
         soft: -1
@@ -21,12 +22,13 @@ services:
     networks:
       - default
   elasticsearch02:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.0.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.0.1
+    container_name: elasticsearch02
     environment:
       - cluster.name=conex-moose
       - node.name=elasticsearch02
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "ES_JAVA_OPTS=-Xms4g -Xmx4g"
       - "discovery.zen.ping.unicast.hosts=elasticsearch01"
     ulimits:
       memlock:
@@ -38,13 +40,16 @@ services:
         target: /usr/share/elasticsearch/data
     networks:
       - default
+    depends_on:
+      - "elasticsearch01"
   elasticsearch03:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.0.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.0.1
+    container_name: elasticsearch03
     environment:
       - cluster.name=conex-moose
       - node.name=elasticsearch03
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "ES_JAVA_OPTS=-Xms4g -Xmx4g"
       - "discovery.zen.ping.unicast.hosts=elasticsearch01"
     ulimits:
       memlock:
@@ -56,24 +61,33 @@ services:
         target: /usr/share/elasticsearch/data
     networks:
       - default
+    depends_on:
+      - "elasticsearch02"
   logstash01:
     image: docker.elastic.co/logstash/logstash:6.0.0
+    container_name: logstash01
     environment:
-      - XPACK_MONITORING_ELASTICSEARCH_URL=http://elasticsearch01:9200
+      - node.name=logstash01
+      - "LS_JAVA_OPTS=-Xms8g -Xmx8g"
     volumes:
       - type: bind
         source: ./logstash/pipeline
         target: /usr/share/logstash/pipeline
     networks:
       - default
+    depends_on:
+      - "elasticsearch03"
   kibana01:
-    image: docker.elastic.co/kibana/kibana:6.0.0
+    image: docker.elastic.co/kibana/kibana:6.0.1
+    container_name: kibana01
     environment:
       - ELASTICSEARCH_URL=http://elasticsearch01:9200
     networks:
       - default
     ports:
       - 5601:5601
+    depends_on:
+      - "elasticsearch03"
 
 volumes:
   esdata01:
