--- a/xpack/platinum-overrides.yml
+++ b/xpack/platinum-overrides.yml
@@ -22,7 +22,7 @@ services:
       - ELASTIC_PASSWORD=$ELASTIC_PASSWORD
       - xpack.security.http.ssl.enabled=true
       - xpack.security.transport.ssl.enabled=true
-      - xpack.security.transport.ssl.verification_mode=certificate
+      - xpack.security.transport.ssl.verification_mode=none
       - xpack.ssl.certificate_authorities=$ES_CERTS_DIR/ca/ca.crt
       - xpack.ssl.certificate=$ES_CERTS_DIR/elasticsearch01/elasticsearch01.crt
       - xpack.ssl.key=$ES_CERTS_DIR/elasticsearch01/elasticsearch01.key
@@ -41,7 +41,7 @@ services:
       - ELASTIC_PASSWORD=$ELASTIC_PASSWORD
       - xpack.security.http.ssl.enabled=true
       - xpack.security.transport.ssl.enabled=true
-      - xpack.security.transport.ssl.verification_mode=certificate
+      - xpack.security.transport.ssl.verification_mode=none
       - xpack.ssl.certificate_authorities=$ES_CERTS_DIR/ca/ca.crt
       - xpack.ssl.certificate=$ES_CERTS_DIR/elasticsearch02/elasticsearch02.crt
       - xpack.ssl.key=$ES_CERTS_DIR/elasticsearch02/elasticsearch02.key
@@ -60,7 +60,7 @@ services:
       - ELASTIC_PASSWORD=$ELASTIC_PASSWORD
       - xpack.security.http.ssl.enabled=true
       - xpack.security.transport.ssl.enabled=true
-      - xpack.security.transport.ssl.verification_mode=certificate
+      - xpack.security.transport.ssl.verification_mode=none
       - xpack.ssl.certificate_authorities=$ES_CERTS_DIR/ca/ca.crt
       - xpack.ssl.certificate=$ES_CERTS_DIR/elasticsearch03/elasticsearch03.crt
       - xpack.ssl.key=$ES_CERTS_DIR/elasticsearch03/elasticsearch03.key
